# bento-bench

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  bench-design.md  manifest.example.json  manifest.json
.github/workflows/: ci.yml  docker.yml  lint.yml  release-binary.yml
crates/bencher/: Cargo.toml
crates/bencher/migrations/: 0_create_datasheet_entries.sql
crates/bencher/src/: bento_sample.rs  config.rs  lib.rs
crates/bencher/src/commands/: bench.rs  datasheet.rs  fetch.rs  mod.rs  prepare.rs  prepare_local.rs  prepare_request.rs
crates/bencher/src/commands/datasheet/: bench.rs  config.rs  db.rs  generate.rs  mod.rs  prepare.rs
crates/bencher/src/commands/refactor/: bench.rs  manifest.rs  mod.rs  prepare.rs  prepare_local.rs  prepare_request.rs
crates/bencher/src/datasheet/: db.rs  mod.rs
crates/bencher/src/prover/: config.rs  mod.rs  prove.rs
crates/bento-bench/: Cargo.toml
crates/bento-bench/src/commands/: fetch.rs  manifest.rs  mod.rs  prepare.rs  prepare_local.rs  prepare_request.rs  run_bench.rs
crates/bento-bench/src/prover/: mod.rs  prove.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/guests/: Cargo.toml  build.rs
crates/guests/bento-sample/: Cargo.toml
crates/guests/bento-sample/src/: main.rs
crates/guests/ordergen-loop/: Cargo.toml
crates/guests/ordergen-loop/src/: main.rs
scripts/: docker-run-benchmarks.sh  migrate-suite.sh  upload-suite.sh
