[workspace]
resolver = "3"

members = ["crates/bencher", "crates/guests", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
core = { path = "crates/core" }
guests = { path = "crates/guests" }

anyhow = "1.0.98"
bincode = "1.3.3"
bonsai-sdk = { version = "1.4.1", features = ["non_blocking"] }
boundless-market = "1.1.0"
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }
derive_more = "2"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
risc0-binfmt = { version = "3.0.2" }
risc0-build = { version = "3.0.3" }
risc0-zkvm = { version = "3.0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
thiserror = "1.0"
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
url = "2.5"
