[workspace]
resolver = "3"

members = ["crates/bento-bench", "crates/guests", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
core = { path = "crates/core" }
guests = { path = "crates/guests" }

anyhow = "1.0.98"
bonsai-sdk = { version = "1.4.1", features = ["non_blocking"] }
boundless-market = "1.4.0"
clap = { version = "4.5", features = ["derive", "env"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
risc0-build = { version = "3.0.3" }
risc0-zkvm = { version = "3.0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
reqwest = { version = "0.12", features = ["stream"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-tar = "0.3"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
