[package]
name = "bencher"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "bento-bench"
path = "src/bin/bento_bench.rs"

[dependencies]
anyhow = { workspace = true }
bonsai-sdk = { workspace = true }
boundless-market = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }
hex = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
alloy = "1.0.41"
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio", "migrate", "uuid", "time"] }
serde_json = "1.0.104"
tabled = "0.20.0"
url.workspace = true
