[package]
name = "bento-sample"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
bytemuck = "1.13"
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable"] }
core = { path = "../../core" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", rev = "7ff2b8465891d1cbb55a69e553e05d369ce41d72", features = [
    "keccak",
] }
